<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_dialog"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/find_new_version"
        android:textColor="@color/text_black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center_horizontal"
        android:textColor="@color/text_black"
        android:textSize="14sp" />

    <ProgressBar
        android:id="@+id/pb_progress"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        tools:visibility="visible"
        android:visibility="gone"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:progressDrawable="@drawable/bg_horizontal_progressbar"/>

    <View style="@style/line2"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">


        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/text_grey"
            android:textSize="14sp" />

        <View
            android:id="@+id/view_btn_line"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/ui_line_bg" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/update_immediately"
            android:textColor="@color/primary_color"
            android:textSize="14sp" />

    </LinearLayout>
</LinearLayout>